Archive2/3a/ac0799c785afa9/output
main.cpp:8:5: error: too many arguments to function call, expected 1, have 2; did you mean '::bar'?
    bar(2, B{});
    ^~~
    ::bar
main.cpp:3:6: note: '::bar' declared here
void bar(int, B){} // second overload
     ^
1 error generated.
